[package]
name = "kaho"
description = "A Rust-based library for interacting with Stoat."
version = "0.0.2"
authors = ["Reina"]
repository = "https://github.com/reinacchi/kaho"
license = "MIT"
edition = "2021"

[features]
default = ["cache", "type-store"]
cache = []
type-store = []
msgpack = ["dep:rmp-serde"]

[dependencies]
async-channel = "2.3.1"
bitflags = { version = "2.9.1", features = ["serde"] }
futures = "0.3.31"
reqwest = { version = "0.12.20", default-features = false, features = ["json", "rustls-tls"] }
rmp-serde = { version = "1.3.1", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_urlencoded = "0.7.1"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.26.2", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1.41"
